@@ -212,6 +212,7 @@ variables work.</p>
 
 <example>
 [E=VAR:VAL]
+[E=!VAR]
 </example>
 
 <p><code>VAL</code> may contain backreferences (<code>$N</code> or
@@ -225,6 +226,15 @@ variables work.</p>
 
 <p>you can set the environment variable named <code>VAR</code> to an
 empty value.</p>
+
+<p>The form</p>
+
+<example>
+[E=!VAR]
+</example>
+
+<p>allows to unset a previouslz set environment variable named
+<code>VAR</code>.</p>
 
 <p>Environment variables can then be used in a variety of
 contexts, including CGI programs, other RewriteRule directives, or
